envoy-http-proxy/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 8001 

        #static_resources:
        #  listeners:
        #
        #  - name: listener_0
        #    address:
        #      socket_address:
        #        protocol: TCP
        #        address: 0.0.0.0 
        #        port_value: 10000
        #    filter_chains:
        #    - filters:
        #      - name: envoy.filters.network.http_connection_manager
        #        typed_config:
        #          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        #          stat_prefix: ingress_http
        #          access_log:
        #          - name: envoy.access_loggers.stdout
        #            typed_config:
        #              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
        #
        #          route_config:
        #            name: local_route
        #            virtual_hosts:
        #            - name: tunnel_service
        #              domains:
        #                - "*.tunnel.example.com:443"
        #              routes:
        #              - match:
        #                  connect_matcher:
        #                    {}
        #                route:
        #                  cluster: tunnel 
        #                  upgrade_configs:
        #                  - upgrade_type: CONNECT
        #                    connect_config:
        #                      {}
        #
        #            - name: outound_passthrough 
        #              domains:
        #                - "*"
        #              routes:
        #              - match:
        #                  connect_matcher:
        #                    {}
        #                route:
        #                  cluster: outbound_proxy 
        #                  upgrade_configs:
        #                  - upgrade_type: CONNECT
        #
        #          http_filters:
        #          - name: envoy.filters.http.router
        #          http2_protocol_options:
        #            allow_connect: true
        #          upgrade_configs:
        #          - upgrade_type: CONNECT
        #
        #  clusters:
        #  - name: tunnel 
        #    type: LOGICAL_DNS
        #    dns_lookup_family: V4_ONLY
        #    lb_policy: ROUND_ROBIN
        #    connect_timeout: 5s
        #    typed_extension_protocol_options:
        #      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        #        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        #        explicit_http_config:
        #          http2_protocol_options: {}
        #    load_assignment:
        #      cluster_name: tunnel 
        #      endpoints:
        #      - lb_endpoints:
        #        - endpoint:
        #            address:
        #              socket_address:
        #                address: tunnel 
        #                port_value: 8080 
        #
        #  - name: outbound_proxy 
        #    type: STRICT_DNS
        #    connect_timeout: 5s
        #    typed_extension_protocol_options:
        #      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        #        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        #        explicit_http_config:
        #          http2_protocol_options: {}
        #    load_assignment:
        #      cluster_name: outbound_proxy 
        #      endpoints:
        #        - lb_endpoints:
        #            - endpoint:
        #                address:
        #                  socket_address:
        #                    address: 10.201.136.124
        #                    port_value: 443 
        #

# This will proxy CONNECT requests from a downstream connecting on 127.0.0.1:10001
# to an upstream listening on 127.0.0.1:10002
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0 
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  connect_matcher:
                    {}
                route:
                  cluster: cluster_0
                  upgrade_configs:
                  - upgrade_type: CONNECT
          http_filters:
          - name: envoy.filters.http.router
          http2_protocol_options:
            allow_connect: true
          upgrade_configs:
          - upgrade_type: CONNECT
  clusters:
  - name: cluster_0
    type: STRICT_DNS
    connect_timeout: 5s
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http_protocol_options: {}
    load_assignment:
      cluster_name: cluster_0
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.201.136.124
                port_value: 8080
